# Dimension

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: ar_object.frag  ar_object.vert  object.frag  pbr.frag  pbr.vert
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ARCore/: jni_interface.cpp  jni_interface.h  main_application.cpp  main_application.h  util.h
app/src/main/cpp/OCCT/: occt.cpp  occt.h
app/src/main/cpp/Prometheus/: background_renderer.cpp  background_renderer.h  glm.h  object_renderer.cpp  object_renderer.h  plane_renderer.cpp  plane_renderer.h  point_cloud_renderer.cpp  point_cloud_renderer.h  texture.cpp  texture.h  util.cpp
app/src/main/java/com/example/dimension/: ARActivity.java  CameraPermissionHelper.java  DepthSettings.java  InstantPlacementSettings.java  JniInterface.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
